kubernetes/core/argocd/manifests/ingress-rlservers.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd-server-rlservers
  namespace: argocd
  annotations:
    traefik.ingress.kubernetes.io/router.middlewares: traefik-netbird-only@kubernetescrd
spec:
  ingressClassName: traefik
  rules:
    - host: argocd.rlservers.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: argocd-server
                port:
                  number: 80
